--- a/css/productosAlanis.css
+++ b/css/productosAlanis.css
@@ -9,9 +9,12 @@ h5{
 }
 
 #listaProductos{
-    margin-left: 30px;
+    padding-top: 50px;
+    padding-left: 230px;
 }
 
 footer{
+    margin-top: 150px;
     text-align: center;
+    background-color: darkgrey;
 }
